more options for dealing with proxies
Now a setting can be added to the global (pastebinc.conf) config file
or to an individual config file to bypass the proxy for all (or one)
provider(s).

Additionally, a flag has been added (-B) to avoid bypassing the proxy
manually if, for instance, you have a global setting to bypass it,
but do not want to bypass it for a single invocation.

Closes #1, Closes #2

--- a/etc/pastebinc.conf
+++ b/etc/pastebinc.conf
@@ -1,2 +1,17 @@
 [defaults]
 provider=pastebin.com
+
+# By default, if your network config includes using a proxy,
+# pastebinc will try to use that proxy.  However, in some
+# cases you need to bypass the proxy.  You can do this manually
+# by means of the "-b" flag.  If you would rather have a global
+# default to *always* bypass the proxy, uncomment the config
+# line below (bypass_proxy=1).
+
+# Note that this setting can be added to the [server] section
+# of a specific provider configuration file.  This is helpful
+# where you may have an internal pastebin-clone that does not
+# need to go throught the proxy, but all others (on the WWW)
+# should go through your network proxy.
+
+# bypass_proxy=1
