Fix small doc typo

--- a/etc/pastebinc.conf
+++ b/etc/pastebinc.conf
@@ -11,7 +11,7 @@ provider=pastebin.com
 # Note that this setting can be added to the [server] section
 # of a specific provider configuration file.  This is helpful
 # where you may have an internal pastebin-clone that does not
-# need to go throught the proxy, but all others (on the WWW)
+# need to go through the proxy, but all others (on the WWW)
 # should go through your network proxy.
 
 # bypass_proxy=1
